--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 
@@ -11,3 +12,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+mainClassName = "main.game.CommandLine.GameRunner";
+
+// run {
+//  standardinput = System.in
+//}
