--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-mainClassName = "game.CommandLine.GameRunner";
+jar { manifest {
+        attributes 'Main-Class': 'game.CommandLine.GameRunner'
+    }
+}
 
+mainClassName = "game.CommandLine.GameRunner";
 
 run {
     standardInput = System.in
